<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PSSongSearchViewController" customModule="PracticoSwift" customModuleProvider="target">
            <connections>
                <outlet property="ascSwitch" destination="Yff-tY-UFJ" id="64c-Su-PYB"/>
                <outlet property="orderBySegment" destination="bp2-ox-X58" id="wUI-dF-IDF"/>
                <outlet property="songQueryText" destination="st0-uY-Qst" id="Tqb-O6-nmq"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Buscador de Canciones" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HeY-g5-aIt">
                    <rect key="frame" x="16" y="125" width="343" height="21"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="21" id="u0D-mU-Fcw"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="st0-uY-Qst">
                    <rect key="frame" x="16" y="154" width="343" height="30"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="30" id="DyG-DB-Jhw"/>
                    </constraints>
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ordenar Por" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gLe-KJ-Avr">
                    <rect key="frame" x="16" y="192" width="343" height="21"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="21" id="cEl-0d-Jd8"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <segmentedControl opaque="NO" contentMode="scaleToFill" restorationIdentifier="orderBySegment" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="bp2-ox-X58">
                    <rect key="frame" x="16" y="221" width="343" height="28"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="27" id="Ydl-Ym-N2A"/>
                    </constraints>
                    <segments>
                        <segment title="Nombre"/>
                        <segment title="Fecha Lanzam"/>
                        <segment title="Track Id"/>
                    </segments>
                </segmentedControl>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ascendente" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j65-EA-A5I">
                    <rect key="frame" x="16" y="256" width="343" height="21"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="21" id="9RD-zb-RSS"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" restorationIdentifier="ascSwitch" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yff-tY-UFJ">
                    <rect key="frame" x="16" y="285" width="51" height="31"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="31" id="28b-69-im3"/>
                    </constraints>
                </switch>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fal-2q-fTM">
                    <rect key="frame" x="163" y="317" width="48" height="30"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="30" id="HvT-1I-8Wm"/>
                    </constraints>
                    <state key="normal" title="Buscar"/>
                    <connections>
                        <action selector="searchButtonAction:" destination="-1" eventType="touchUpInside" id="R4n-Qb-AwX"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstItem="Yff-tY-UFJ" firstAttribute="top" secondItem="j65-EA-A5I" secondAttribute="bottom" constant="8" id="5YJ-91-Uv8"/>
                <constraint firstItem="st0-uY-Qst" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="7FF-vu-uP2"/>
                <constraint firstItem="HeY-g5-aIt" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="88f-lX-MAt"/>
                <constraint firstItem="fal-2q-fTM" firstAttribute="top" secondItem="j65-EA-A5I" secondAttribute="bottom" constant="40" id="B5t-QD-wAC"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="bp2-ox-X58" secondAttribute="trailing" constant="16" id="Bsh-Eg-6mx"/>
                <constraint firstItem="j65-EA-A5I" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Ej7-yb-DtB"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="HeY-g5-aIt" secondAttribute="trailing" constant="16" id="HSa-W2-U5d"/>
                <constraint firstItem="bp2-ox-X58" firstAttribute="top" secondItem="gLe-KJ-Avr" secondAttribute="bottom" constant="8" id="Ly5-pn-NaP"/>
                <constraint firstItem="gLe-KJ-Avr" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="N58-Dk-D0l"/>
                <constraint firstItem="gLe-KJ-Avr" firstAttribute="top" secondItem="st0-uY-Qst" secondAttribute="bottom" constant="8" id="Pzb-vo-JSQ"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="j65-EA-A5I" secondAttribute="trailing" constant="16" id="UBp-cO-zAG"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="st0-uY-Qst" secondAttribute="trailing" constant="16" id="Um4-Fs-nTj"/>
                <constraint firstItem="HeY-g5-aIt" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="105" id="XYC-0g-3cm"/>
                <constraint firstItem="Yff-tY-UFJ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="bSF-P7-iEZ"/>
                <constraint firstItem="bp2-ox-X58" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="jek-mh-nno"/>
                <constraint firstItem="j65-EA-A5I" firstAttribute="top" secondItem="bp2-ox-X58" secondAttribute="bottom" constant="8" id="mEQ-Ci-PIi"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="fal-2q-fTM" secondAttribute="trailing" constant="164" id="xTw-dP-Qgd"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gLe-KJ-Avr" secondAttribute="trailing" constant="16" id="xfU-JI-PEt"/>
                <constraint firstItem="fal-2q-fTM" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="163" id="yfv-NB-e2A"/>
                <constraint firstItem="st0-uY-Qst" firstAttribute="top" secondItem="HeY-g5-aIt" secondAttribute="bottom" constant="8" id="zmI-Gj-Yxn"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
        </view>
    </objects>
</document>
